# docx-rs

./: Cargo.toml
src/: app.rs  comments.rs  content_type.rs  core.rs  docx.rs  error.rs  lib.rs  rels.rs
src/document/: body.rs  bookmark_end.rs  bookmark_start.rs  break.rs  comment_range.rs  drawing.rs  grid_column.rs  hyperlink.rs  mod.rs  paragraph.rs  run.rs  smart_tag.rs  tab.rs  table.rs  table_cell.rs  table_grid.rs  table_row.rs  text.rs
src/font_table/: charset.rs  family.rs  font.rs  mod.rs  pitch.rs
src/formatting/: bold.rs  borders.rs  character_property.rs  color.rs  dstrike.rs  indent_level.rs  italics.rs  justification.rs  numbering_id.rs  numbering_property.rs  outline.rs  paragraph_property.rs  size.rs  strike.rs  table_borders.rs  table_cell_property.rs  table_indent.rs  table_justification.rs  table_property.rs  table_row_property.rs  table_width.rs  underline.rs
src/formatting/border/: between_border.rs  bottom_border.rs  left_border.rs  right_border.rs  top_border.rs
src/numbering/: level.rs  mod.rs
src/styles/: default_style.rs  mod.rs  style.rs
